--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,16 @@
               	      <include name="*.jar"/>
               	    </fileset>
               	  </path>
-    
+    <path id="Web App Libraries.libraryclasspath">
+        <pathelement location="WebContent/WEB-INF/lib/ojdbc14.jar"/>
+    </path>
+    <path id="EAR Libraries.libraryclasspath"/>
+    <path id="userregistratio.classpath">
+        <pathelement location="build/classes"/>
+        <path refid="Web App Libraries.libraryclasspath"/>
+        <path refid="EAR Libraries.libraryclasspath"/>
+        
+    </path>
     <target name="init">
         <mkdir dir="build/classes"/>
         <copy includeemptydirs="false" todir="build/classes">
