--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" ?> 
-<project name="AntExample1" default="war">
+<project name="AntExample1" default="war" basedir=".">
 
+  <property name="tcserver.home" value="${basedir}/jars" />
+        
+        <!-- Define the CLASSPATH -->
+  <path id="compile.classpath">
+    <fileset dir="${tcserver.home}/bin">
+      <include name="*.jar"/>
+    </fileset>
+    <pathelement location="${tcserver.home}/lib"/>
+    <fileset dir="${tcserver.home}/lib">
+      <include name="*.jar"/>
+    </fileset>
+  </path>
 	<path id="compile.classpath">
 		<fileset dir="WebContent/WEB-INF/lib">
 			<include name="*.jar"/>
